# diesel_async

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
examples/pooled-pg-with-rustls/: Cargo.toml
examples/pooled-pg-with-rustls/src/: main.rs
examples/postgres/copy-from/: Cargo.toml
examples/postgres/copy-from/src/: main.rs
examples/postgres/pipelining/: Cargo.toml
examples/postgres/pipelining/src/: main.rs  rust_out
examples/postgres/pooled-with-rustls/: Cargo.toml
examples/postgres/pooled-with-rustls/src/: main.rs
examples/postgres/run-pending-migrations-with-rustls/: Cargo.toml
examples/postgres/run-pending-migrations-with-rustls/migrations/2023-09-08-075742_dummy_migration/: down.sql
examples/postgres/run-pending-migrations-with-rustls/src/: main.rs
examples/sync-wrapper/: Cargo.toml
examples/sync-wrapper/migrations/00000000000000_diesel_initial_setup/: up.sql
examples/sync-wrapper/src/: main.rs
src/: async_connection_wrapper.rs  deadpool.rs  deref_connection.rs  doctest_setup.rs  lib.rs  migrations.rs  stmt_cache.rs  sync_connection_wrapper.rs  transaction_manager.rs
src/mysql/: cancel_token.rs  error_helper.rs  mod.rs  row.rs  serialize.rs
src/pg/: copy.rs  error_helper.rs  mod.rs  row.rs  serialize.rs  transaction_builder.rs
src/pooled_connection/: bb8.rs  deadpool.rs  mobc.rs  mod.rs
src/run_query_dsl/: mod.rs  utils.rs
src/statement_cache/: mod.rs  strategy.rs
src/sync_connection_wrapper/: mod.rs  sqlite.rs
tests/: copy.rs  custom_types.rs  deadpool.rs  instrumentation.rs  lib.rs  migrations.rs  notifications.rs  pooling.rs  run_query_dsl_impl_match.rs  sync_wrapper.rs  transactions.rs  type_check.rs
