[package]
name = "diesel-async"
version = "0.5.2"
authors = ["Georg Semmler <github@weiznich.de>"]
edition = "2021"
autotests = false
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/weiznich/diesel_async"
keywords = ["orm", "database", "sql", "async"]
categories = ["database"]
description = "An async extension for Diesel the safe, extensible ORM and Query Builder"
rust-version = "1.78.0"

[dependencies]
futures-channel = { version = "0.3.17", default-features = false, features = [
  "std",
  "sink",
], optional = true }
futures-util = { version = "0.3.17", default-features = false, features = [
  "std",
  "sink",
] }
tokio-postgres = { version = "0.7.10", optional = true }
tokio = { version = "1.26", optional = true }
mysql_async = { version = "0.36.0", optional = true, default-features = false, features = [
  "minimal-rust",
] }
mysql_common = { version = "0.35.3", optional = true, default-features = false }

bb8 = { version = "0.9", optional = true }
async-trait = { version = "0.1.66", optional = true }
deadpool = { version = "0.12", optional = true, default-features = false, features = [
  "managed",
] }
mobc = { version = ">=0.7,<0.10", optional = true }
scoped-futures = { version = "0.1", features = ["std"] }

[dependencies.diesel]
version = "~2.2.0"
default-features = false
features = [
  "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
]
git = "https://github.com/diesel-rs/diesel"
branch = "master"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["rt", "macros", "rt-multi-thread"] }
cfg-if = "1"
chrono = "0.4"
assert_matches = "1.0.1"

[dev-dependencies.diesel]
version = "~2.2.0"
default-features = false
features = [
  "chrono"
]
git = "https://github.com/diesel-rs/diesel"
branch = "master"

[dev-dependencies.diesel_migrations]
version = "2.2.0"
git = "https://github.com/diesel-rs/diesel"
branch = "master"

[features]
default = []
mysql = [
  "diesel/mysql_backend",
  "mysql_async",
  "mysql_common",
  "futures-channel",
  "tokio",
]
postgres = ["diesel/postgres_backend", "tokio-postgres", "tokio", "tokio/rt"]
sqlite = ["diesel/sqlite", "sync-connection-wrapper"]
sync-connection-wrapper = ["tokio/rt"]
async-connection-wrapper = ["tokio/net"]
pool = []
r2d2 = ["pool", "diesel/r2d2"]
bb8 = ["pool", "dep:bb8", "dep:async-trait"]
mobc = ["pool", "dep:mobc"]
deadpool = ["pool", "dep:deadpool"]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[package.metadata.docs.rs]
features = [
  "postgres",
  "mysql",
  "sqlite",
  "deadpool",
  "bb8",
  "mobc",
  "async-connection-wrapper",
  "sync-connection-wrapper",
  "r2d2",
]
no-default-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
  ".",
  "examples/postgres/pooled-with-rustls",
  "examples/postgres/run-pending-migrations-with-rustls",
  "examples/sync-wrapper",
]
