[package]
name = "sync-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel-async = { version = "0.6.0", path = "../../", features = ["sync-connection-wrapper", "async-connection-wrapper"] }
futures-util = "0.3.21"
tokio = { version = "1.2.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[dependencies.diesel]
version = "2.2.0"
default-features = false
features = ["returning_clauses_for_sqlite_3_35"]
git = "https://github.com/diesel-rs/diesel"
branch = "master"

[dependencies.diesel_migrations]
version = "2.2.0"
git = "https://github.com/diesel-rs/diesel"
branch = "master"

[features]
default = ["sqlite"]
sqlite = ["diesel-async/sqlite"]
