[package]
name = "pipelining"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel-async = { version = "0.7.0", path = "../../../", features = ["bb8", "postgres"] }
tokio = { version = "1.2.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[dependencies.diesel]
version = "2.3.0"
default-features = false
