[package]
name = "run-pending-migrations-with-rustls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel-async = { version = "0.6.0", path = "../../../", features = ["bb8", "postgres", "async-connection-wrapper"] }
futures-util = "0.3.21"
rustls = "0.23.8"
rustls-platform-verifier = "0.5.0"
tokio = { version = "1.2.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.7"
tokio-postgres-rustls = "0.13.0"

[dependencies.diesel]
version = "2.2.0"
default-features = false
git = "https://github.com/diesel-rs/diesel"
branch = "master"

[dependencies.diesel_migrations]
version = "2.2.0"
git = "https://github.com/diesel-rs/diesel"
branch = "master"
